--- a/TnTComponents/Styles/Components/_sidenav.scss
+++ b/TnTComponents/Styles/Components/_sidenav.scss
@@ -65,10 +65,10 @@
 
 .tnt-sidebar[theme=default] {
    width: 250px;
-   background-color: $tnt-color-primary;
+   background-color: $tnt-color-surface-variant;
 
    li > a {
-      color: $tnt-color-on-primary;
+      color: $tnt-color-on-surface-variant;
       font-size: 1.1rem;
       height: 3.25rem;
       line-height: 3.25rem;
