--- a/TnTComponents/Styles/Components/_sidenav.scss
+++ b/TnTComponents/Styles/Components/_sidenav.scss
@@ -1,95 +1,108 @@
 ﻿.tnt-sidebar-transition {
-   transition: transform ease-in-out 150ms;
+    transition: transform ease-in-out 150ms;
 }
 
 .tnt-sidebar {
-   position: fixed;
-   left: 0;
-   top: 0;
-   margin: 0;
-   height: 100%;
-   z-index: 999;
-   overflow-y: auto;
-   will-change: transform;
-   backface-visibility: hidden;
-   transform: translateX(-105%);
-   border-radius: 1rem;
-   @extend .tnt-z-depth-2;
-   @extend .tnt-sidebar-transition;
+    position: fixed;
+    left: 0;
+    top: 0;
+    margin: 0;
+    width: 250px;
+    height: 100%;
+    z-index: 999;
+    overflow-y: auto;
+    will-change: transform;
+    backface-visibility: hidden;
+    transform: translateX(-105%);
+    border-radius: 1rem;
+    @extend .tnt-z-depth-2;
+    @extend .tnt-sidebar-transition;
 
-   ul {
-      padding: 0;
-   }
+    ul {
+        padding: 0;
+    }
 
-   li {
-      float: none;
-      list-style-type: none;
-      line-height: 3rem;
-      vertical-align: middle;
+    li {
+        float: none;
+        list-style-type: none;
+        line-height: 3rem;
+        vertical-align: middle;
 
-      &:hover {
-         background-color: rgba(0,0,0,.05);
-      }
+        &:hover {
+            background-color: rgba(0,0,0,.05);
+        }
 
-      &:active {
-         background-color: rgba(0,0,0,.05);
-      }
+        &:active {
+            background-color: rgba(0,0,0,.05);
+        }
 
-      > a {
-         display: block;
-         font-weight: bold;
-         text-decoration: none;
-         vertical-align: top;
+        > a {
+            display: block;
+            font-weight: bold;
+            text-decoration: none;
+            vertical-align: top;
 
-         > i,
-         > i.material-icons {
-            float: left;
-            padding-right: 1rem;
-            line-height: 3rem;
-         }
+            > i,
+            > i.material-icons {
+                float: left;
+                padding-right: 1rem;
+                line-height: 3rem;
+            }
 
-         > i.material-icons {
-            vertical-align: middle;
-         }
-      }
-   }
-}
+            > i.material-icons {
+                vertical-align: middle;
+            }
+        }
+    }
 
-.tnt-sidebar-expanded {
-   transform: translateX(-5%);
+    @media #{$medium-and-up} {
+        position: fixed;
+        transform: translateX(-5%);
+    }
+
+    @media #{$small-and-down} {
+        &.expanded {
+            position: fixed;
+            transform: translateX(-5%);
+        }
+    }
 }
 
 .tnt-sidebar-button {
-   cursor: pointer;
+    cursor: pointer;
+    @extend .tnt-sidebar-transition;
+
+    @media #{$medium-and-up} {
+        visibility: hidden;
+    }
+
+    @media #{$small-and-down} {
+        visibility: visible;
+    }
+}
+
+.tnt-sidebar-button {
+    cursor: pointer;
 }
 
 .tnt-sidebar[theme=default] {
-   width: 250px;
-   background-color: $tnt-color-surface-variant;
+    background-color: $tnt-color-surface-variant;
 
-   li > a {
-      color: $tnt-color-on-surface-variant;
-      font-size: 1.1rem;
-      height: 3.25rem;
-      line-height: 3.25rem;
-      padding: 0 (1.2rem * 2);
+    li > a {
+        color: $tnt-color-on-surface-variant;
+        font-size: 1.1rem;
+        height: 3.25rem;
+        line-height: 3.25rem;
+        padding: 0 (1.2rem * 2);
 
-      & > i,
-      & > i.material-icons {
-         line-height: 3.25rem;
-         margin: 0 (1.2rem * 2) 0 0;
-      }
-   }
+        & > i,
+        & > i.material-icons {
+            line-height: 3.25rem;
+            margin: 0 (1.2rem * 2) 0 0;
+        }
+    }
 }
 
 .tnt-sidebar-button[theme=default] {
-   position: fixed;
-   transform: translateX(0px);
-   @extend .tnt-sidebar-transition;
-   color: $tnt-color-on-primary;
-}
-
-.tnt-sidebar-button[theme=default].tnt-sidebar-expanded {
-   position: fixed;
-   transform: translateX(250px + 5px);
+    color: $tnt-color-on-primary;
 }
