--- a/TnTComponents/TnTSideBar.razor
+++ b/TnTComponents/TnTSideBar.razor
@@ -1,29 +1,38 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @inherits TnTIconComponent
 
-@if (_layout?.Responsive ?? false) {
-    <TnTMediaCallback Query="(max-width:768px)" OnChangedCallback="SetIsSmallScreen"></TnTMediaCallback>
-}
-
-
-<div theme="@Theme" class="@GetClass() @(Expanded ? "tnt-sidebar-expanded" : string.Empty)">
+<div theme="@Theme" class="@GetClass()">
     @ChildContent
 </div>
 
 @code {
     [CascadingParameter]
-    private TnTLayout? _layout{ get;set; }
+    private TnTLayout? _layout { get; set; }
 
     [Parameter]
     public RenderFragment ChildContent { get; set; } = default!;
 
     [Parameter]
-    public bool Expanded { get; set; }
+    public bool Expanded {
+        get {
+            return x;
+        }
+
+        set {
+            x = value;
+        }
+    }
 
     [Parameter]
     public override string BaseCssClass { get; set; } = "tnt-sidebar";
 
+    private bool x;
+
     private void SetIsSmallScreen(bool isSmallScreen) {
         Expanded = !isSmallScreen;
+    }
+
+    protected override string GetClass() {
+        return $"{base.GetClass()} {(Expanded ? "expanded" : string.Empty)}";
     }
 }
