--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="TnTComponents.Server.styles.css" />
     <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet @rendermode="@RenderMode.InteractiveAuto" />
+    <link rel="stylesheet" href="_content/TnTComponents/style.css" />
+    <HeadOutlet />
 </head>
 
 <body theme="default">
