--- a/TnTComponents/Styles/Components/_body.scss
+++ b/TnTComponents/Styles/Components/_body.scss
@@ -4,6 +4,11 @@
     margin-left: 0;
     transition: width ease-in-out 150ms;
     transition: margin-left ease-in-out 150ms;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
 
     @media #{$medium-and-up} {
         width: calc(100% - 250px);
@@ -11,7 +16,6 @@
     }
 
     @media #{$small-and-down} {
-        position: fixed;
         transform: translateX(0%);
     }
 }
